--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,18 @@
     <string name="prompt_email">用户名</string>
     <string name="prompt_password">密码</string>
     <string name="action_sign_in">登录</string>
-    <string name="action_return">返回</string>
+    <string name="action_sign_up">注册</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid">输入内容不符合规则</string>
     <string name="error_incorrect_password">用户名或密码错误</string>
     <string name="error_username_required">用户名不能为空</string>
     <string name="error_password_required">密码不能为空</string>
+
+    <string name="title_activity_food_view">FoodView</string>
+    <string name="food_ordering">点菜</string>
+    <string name="food_return">退点</string>
+    <string name="ordered_food">已点菜品</string>
+    <string name="look_order">查看订单</string>
+    <string name="call_service">呼叫服务</string>
+    <string name="title_activity_food_order_view">FoodOrderView</string>
 </resources>
